--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.2",
+    "redux-thunk": "^2.4.2",
+    "reselect": "^4.1.7",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
