--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
     "loader-utils": "^3.2.1",
     "nth-check": "^2.1.1",
@@ -21,6 +24,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
+    "stripe": "^11.17.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
