--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
     "dotenv": "^16.0.3",
     "firebase": "^9.14.0",
     "loader-utils": "^3.2.1",
@@ -26,6 +30,7 @@
     "sass": "^1.56.1",
     "stripe": "^11.17.0",
     "styled-components": "^5.3.6",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
